修改不必要的字段